# GenaiGenesis2026

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  DISTRIBUTION.md  Dockerfile  PLAN.md  README.md  WRITEUP.md  build.bat  build.ps1  build.sh  deploy.env.example  docker-compose.yml  main.py  pyproject.toml  test
.claude/: settings.local.json
.github/workflows/: desktop-release.yml
data/: control.db  control.db-shm  control.db-wal
desktop/capture/: __init__.py  camera_capture.py  mic_capture.py  ring_buffer.py  types.py
desktop/tests/: __init__.py  test_capture.py
frontend/: electron_out  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
frontend/dist-electron/electron/: main.js  main.js.map  preload.js  preload.js.map
frontend/electron/: main.ts  preload.ts
frontend/scripts/: dev-cleanup.mjs  e2e-smoke.mjs
frontend/src/: App.tsx  frame-encoder.worker.ts  main.tsx  styles.css  vite-env.d.ts
mirror/: CMakeLists.txt  camera_capture.c  camera_capture.h  camera_capture_smoke.c  capture_types.h  frame_streamer.c  lcd_display.c  lcd_display.h  lcd_display_smoke.c  test
mirror/build-test/: CMakeCache.txt  Makefile  cmake_install.cmake  mirror_capture_smoke  mirror_frame_streamer  mirror_lcd_smoke
mirror/src/: camera_capture.c  camera_capture_smoke.c
scripts/: setup_wsl_mirror_proxy.ps1
server/: __init__.py  main.py  pyproject.toml  validate.py  validation_report.html
server/audio/: speech_tone_classifier.py
server/config/: logging_config.py  settings.py  third_party.py
server/control/: api.py  models.py  store.py  telemetry_recorder.py
server/control/static/: index.html
server/control/templates/: dashboard.html
server/core/: feedback_codec.py  pipeline_controller.py  remote_session_runner.py  sustained_state_monitor.py
server/input/: __init__.py  camera_adapter.py  combined_camera_source.py  mic_adapter.py  remote_media_server.py  replay_adapters.py  screenshot_manager.py
server/models/: protocols.py  types.py
server/reasoning/: llm_engine.py
server/samples/: llm_engine.py
server/samples/working/: meta.json
server/scripts/: record_sample.py
server/state/: eye_state_detector.py  head_pose_detector.py  state_tracker.py  yawn_detector.py
server/ui/: __init__.py  desktop_ui.py  frame_overlay.py  mirror_ui.py  notification_handler.py
server/vision/: blink_detector.py  debug_webcam.py  eye_movement_detector.py  face_landmarks.py  facial_expression_classifier.py  posture_detector.py
tests/: test_state_publishing.py
