[project]
name = "server"
version = "0.1.0"
description = "CognitiveSense - AI cognitive fatigue/stress detection"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "mediapipe==0.10.14",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "sounddevice>=0.5.5",
    "pydantic-settings>=2.13.1",
    "soundfile>=0.13.1",
]

[project.scripts]
cognitivesense = "main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pyright]
include = ["main.py", "server", "desktop", "tests"]
exclude = [".venv", "frontend", "mirror", "test"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingModuleSource = false
